(huge functional update) Added drag and drop functions to JS: now user can drag notes to change their position,   Some CSS fixes: to realise JS functional correctly,   Improved readablity: changed arrays names

--- a/css/style.css
+++ b/css/style.css
@@ -391,6 +391,7 @@ body{
     justify-content: center;
     align-content: center;
     margin-top: 15%;
+    min-height: 73.54px;
 }
 
 .list__element{
